# pybest2paper

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: knowledge_db_retrieval.py  knowledge_db_setup.py  literature_sage.py  principal_investigator.py
src/agentic_valence/: ui.py
src/agentic_valence/agents/: calculation_mage'.py  literature_sage.py  principal_investigator.py  viz_creator.py
src/agentic_valence/scripts/: code_db_setup.py
src/piai/: calculation_mage.py  literature_sage.py  principal_investigator.py  ui.py  utils.py  viz_creator.py
tests/: test_calculation_mage.py  test_knowledge_db.py  test_literature_sage.py  test_principal_investigator.py  test_viz_creator.py
