[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic_valence"
version = "0.1.0"
description = "A multi-agent system for quantu chemistry."
readme = "README.md"
requires-python = ">=3.12"
authors = [
    { name = "Aleksandra Leszczyk", email = "al.leszczyk@gmail.com" }
]
# Dynamically pulling from your requirements.txt
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
asyncio_mode = "auto"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
known_first_party = ["app"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true